--- a/site/index.html
+++ b/site/index.html
@@ -10,5 +10,6 @@
     <h1>Hello, World!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, quidem nisi a molestias nihil sed odio, sit, odit mollitia debitis omnis reprehenderit eos soluta minus ipsam corporis animi dolore pariatur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sunt, facilis, voluptas inventore, soluta perspiciatis maxime sint obcaecati optio sed assumenda mollitia porro ipsum commodi labore ducimus ipsam magnam. Hic!</p>
 </body>
 </html>
